--- a/www-qa.te.com/_TEincludes/ver/1623/v2/generated-src/css/te-global-components.css
+++ b/www-qa.te.com/_TEincludes/ver/1623/v2/generated-src/css/te-global-components.css
@@ -35081,21 +35081,17 @@ html.oldie .te-am-your-acct-change-email.loader {
 }
 
 .language-expansion-modal {
-    padding: 4px 42px 0 0;
-    /* display:inline-block; */
-    /* max-height:500px; */
-    width: 355px;
-    position: relative;
-    height: calc(100vh - 36px);
+    padding:4px 42px 0 0;
+    width:355px;
+    position:relative;
+    height:calc(100vh - 36px);
 }
 
 @media (max-width:719px) {
     body.responsive .language-expansion-modal {
-        /* display:flex; */
-        /* flex-direction:column; */
-        padding: 32px 25px 25px 25px;
+        padding:32px 25px 25px 25px;
         width:100%;
-        height: calc(100vh - 90px);
+        height:calc(100dvh - 90px);
         background-color:#f7f7f7
     }
 }
@@ -35260,21 +35256,20 @@ html.oldie .te-am-your-acct-change-email.loader {
 }
 
 .language-expansion-modal .side-panel-content {
-    overflow: hidden;
-    height: calc(100vh - 380px);
-    /* padding-right:8px; */
+    overflow:hidden;
+    height:calc(100vh - 380px);
 }
 
 @media (min-width:720px) {
-    .language-expansion-modal .side-panel-content {overflow: auto;height: calc(100vh - 300px);}
+    .language-expansion-modal .side-panel-content {
+        overflow:auto;
+        height:calc(100vh - 300px);
+    }
 }
 
 @media (max-width:719px) {
     body.responsive .language-expansion-modal .side-panel-content {
-        /* height:100vh; */
-        /* min-height:298px; */
-        /*         background: orange; */
-        overflow: hidden;
+        overflow:hidden;
     }
 }
 
@@ -35298,7 +35293,7 @@ html.oldie .te-am-your-acct-change-email.loader {
     line-height:1.57142857;
     height:40px;
     padding-left:38px;
-    margin-bottom: 0;
+    margin-bottom:0;
     appearance:none;
     -webkit-appearance:none;
     -moz-appearance:none;
@@ -35487,37 +35482,29 @@ html.oldie .te-am-your-acct-change-email.loader {
 
     body.responsive .language-expansion-modal .side-panel-content .side-panel-head {
         padding:0;
-        /* margin-bottom:-146px !important; */
-        overflow: scroll;
-        height: calc(100vh - 530px);
+        overflow:scroll;
+        height:calc(100vh - 530px);
     }
 }
 
 .language-expansion-modal .side-panel-content .side-panel-search {
-    height: calc(100vh - 446px);
-    /* height:40px; */
+    height:calc(100vh - 446px);
     transform:translate3d(0, 0, 0);
-    border: solid .5px #aaa;
+    border:solid .5px #aaa;
     border-radius:5px;
-    padding: 11px 19px 20px 20px;
-    /* margin-top:-20px; */
+    padding:11px 19px 20px 20px;
     z-index:99999;
-    /* position:relative; */
     background-color:#fff
 }
 
 @media (max-width:719px) {
     body.responsive .language-expansion-modal .side-panel-content .side-panel-search {
-        /* height:100%; */
-        /* padding-bottom:270px; */
-        height: calc(100vh - 528px);
-        /* margin-top: -21px; */
+        height:calc(100vh - 528px);
     }
 }
 
 .language-expansion-modal .side-panel-content .side-panel-search .cmSearchWrap {
     width:100%;
-    /* height:40px; */
     margin:0 auto;
     position:relative
 }
@@ -35525,7 +35512,7 @@ html.oldie .te-am-your-acct-change-email.loader {
 .language-expansion-modal .side-panel-content .side-panel-search .cmSearchWrap .cmSearchInput {
     display:inline-block;
     width:100%;
-    height:100%;
+    height:40px;
     font:500 14px 'Avenir', 'Avenir W02', Helvetica, sans-serif;
     font-size:14px;
     font-size:.875rem;
@@ -35533,7 +35520,6 @@ html.oldie .te-am-your-acct-change-email.loader {
     background:#ededee;
     padding:0 80px 0 17px;
     border:0;
-    height:40px;
 }
 
 .language-expansion-modal .side-panel-content .side-panel-search .cmSearchWrap .cmSearchInput::-ms-clear {
@@ -35783,19 +35769,22 @@ html.oldie .te-am-your-acct-change-email.loader {
 
 .language-expansion-modal .side-panel-content .filterSectionDiv,
 .language-expansion-modal .side-panel-content .filterSectionDivChina {
+    overflow:hidden scroll;
+    padding:0 10px 0 0;
     background:#fff;
     width:107%;
     position:absolute;
     margin-top:12px;
-    overflow: hidden scroll;
-    padding:0 10px 0 0;
-    height: calc(100vh - 512px);
+    height:calc(100vh - 512px);
 }
 
 
 @media (max-width:719px) {
-.language-expansion-modal .side-panel-content .filterSectionDiv,
-.language-expansion-modal .side-panel-content .filterSectionDivChina {/* height: 100%; */}
+
+    .language-expansion-modal .side-panel-content .filterSectionDiv,
+    .language-expansion-modal .side-panel-content .filterSectionDivChina {
+        /* height:100%; */
+    }
 
 }
 
@@ -35805,7 +35794,6 @@ html.oldie .te-am-your-acct-change-email.loader {
 @media (max-width:719px) {
     body.responsive .language-expansion-modal .side-panel-content .filterSectionDivChina {
         width:106%;
-/*         min-height:237px */
     }
 }
 
@@ -35948,12 +35936,11 @@ html.oldie .te-am-your-acct-change-email.loader {
     }
 }
 
-
 @media (max-width:719px) {
     body.responsive .language-expansion-modal .side-panel-content .filterSectionDiv {
-        width: 100%;
-        height: calc(100vh - 600px);
-        padding: 0;
+        width:100%;
+        height:calc(100vh - 600px);
+        padding:0;
     }
 }
 
@@ -35965,7 +35952,6 @@ html.oldie .te-am-your-acct-change-email.loader {
 .language-expansion-modal .side-panel-content .filterSectionDiv .filterSection {
     width:100%;
     margin:0 auto;
-    /* height:140px; */
 }
 
 .language-expansion-modal .side-panel-content .filterSectionDiv .filterSection .search-list {
@@ -35974,17 +35960,18 @@ html.oldie .te-am-your-acct-change-email.loader {
 
 .language-expansion-modal .side-panel-content .filterSectionDiv .filterSection li .countrySections dt span {
     position:absolute;
-    width: 100%;
+    width:100%;
     z-index:1;
     border:1px solid #d9d8d6;
     height:1px;
     left:0;
     margin-left:-10px
 }
+
 @media (max-width:720px) {
-.language-expansion-modal .side-panel-content .filterSectionDiv .filterSection li .countrySections dt span {
-    width: calc(100% + 10px);
-}
+    .language-expansion-modal .side-panel-content .filterSectionDiv .filterSection li .countrySections dt span {
+        width:calc(100% + 10px);
+    }
 }
 
 .language-expansion-modal .side-panel-content .filterSectionDiv .filterSection li .countrySections li a,
@@ -36160,11 +36147,17 @@ html.oldie .te-am-your-acct-change-email.loader {
     height:100% !important
 }
 
-.side-panel-footer {bottom: 0;position: absolute;padding: 0 0 20px 0;width: 100%;left: 0;}
+.side-panel-footer {
+    bottom:0;
+    position:absolute;
+    padding:0 0 20px 0;
+    width:100%;
+    left:0;
+}
 
 .side-panel-footer .line {
     border-top:1px solid #e8e8e8;
-    margin: 0 0 20px 0;
+    margin:0 0 20px 0;
 }
 
 .side-panel-footer .cancel-btn,
@@ -38676,85 +38669,79 @@ html.oldie .te-am-your-acct-change-email.loader {
 /*from head*/
 
 .cdk-overlay-container {
-    z-index: 2000000020
+    z-index:2000000020
 }
 
-@media(max-width: 719px) {
+@media(max-width:719px) {
     .cdk-overlay-container .cdk-global-overlay-wrapper .cdk-overlay-pane {
-        margin-top: 92px !important;
-        width: 100% !important;
-        max-width: 100vw !important
+        margin-top:92px !important;
+        width:100% !important;
+        max-width:100vw !important
     }
 }
 
-@media(max-width: 719px) {
+@media(max-width:719px) {
     .cdk-overlay-container .cdk-overlay-backdrop.cdk-overlay-backdrop-showing {
-        opacity: 0
+        opacity:0
     }
 }
 
 .cdk-overlay-container .mat-dialog-container {
-    border-radius: 0px !important
-
-
-
+    border-radius:0px !important
 }
 
-@media(max-width: 719px) {
+@media(max-width:719px) {
     .cdk-overlay-container .mat-dialog-container {
-        padding: 0px 0px 0px 1px !important
+        padding:0px 0px 0px 1px !important
     }
 }
 
-@media(max-width: 719px) {
+@media(max-width:719px) {
     .modal-hamburger {
-        top: 90px !important
+        top:90px !important
     }
 }
 
-@media only screen and (max-width: 719px) {
+@media only screen and (max-width:719px) {
     .filterSectionDiv {
-/*         min-height: 237px !important */
+        /*         min-height:237px !important */
     }
 
 
-.side-panel-footer {
-    bottom: 0;
-    position: absolute;
-    padding: 0 25px 20px 25px;
-    width: 100%;
-    left: 0;
-}
+    .side-panel-footer {
+        bottom:0;
+        position:absolute;
+        padding:0 25px 20px 25px;
+        width:100%;
+        left:0;
+    }
 }
 
-/* @media(min-width: 360px)and (max-width: 390px) {
+/* @media(min-width:360px)and (max-width:390px) {
 
 
     .side-panel-content .filterSectionDiv {
-        min-height: 237px !important;
-        padding: 0 22px 0 0
+        min-height:237px !important;
+        padding:0 22px 0 0
     }
 
     .side-panel-content .countrySections dt span {
-        margin-left: -22px
+        margin-left:-22px
     }
 } */
 
 
-@media(min-width: 720px){
-.side-panel-footer{
-    padding: 0 42px 25px 0
+@media(min-width:720px) {
+    .side-panel-footer {
+        padding:0 42px 25px 0
+    }
 }
-}
 
 
 
-/* @media only screen and (max-width: 719px){
+/* @media only screen and (max-width:719px){
 ::-webkit-scrollbar{
-    display: none;
+    display:none;
   }
 
 } */
-
-
-
